@@ -44,6 +44,8 @@ ubiquity (2.1.12) UNRELEASED; urgency=low
   [ Mario Limonciello ]
   * Drop old hack for reconfiguring mythbuntu-default-settings since
     this is fixed in user-setup now.
+  * Add a new top function to the Controller to allow toggling the
+    visibility of the live installer from a plugin.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sat, 16 Jan 2010 01:27:31 +0000
 
